--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
     <ul class="main-nav"  id="js-menu">
         <li><a class="nav-links" href="/">Home</a></li>
         <li><a class="nav-links"  href="/">News</a></li>    
-        <li><a class="nav-links"  href="/login.html">Login</a>
+        <li><a class="nav-links"  href="login.html">Login</a>
         </li>
     </ul>
     <span class="navbar-toggle" id="js-navbar-toggle" >
