--- a/login.html
+++ b/login.html
@@ -13,9 +13,9 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
 <nav class="navbar" id="js-nav">
     <a href="/" class="logo white">Dark<span class="violet">.ly</a></span>
     <ul class="main-nav"  id="js-menu">
-        <li><a class="nav-links" href="/">Home</a></li>
-        <li><a class="nav-links"  href="/">News</a></li>    
-        <li><a class="nav-links"  href="/login.html">Login</a>
+        <li><a class="nav-links" href="index.html">Home</a></li>
+        <li><a class="nav-links"  href="news.html">News</a></li>    
+        <li><a class="nav-links"  href="login.html">Login</a>
         </li>
     </ul>
     <span class="navbar-toggle" id="js-navbar-toggle" >
