--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
 integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="styles/form.css">
 </head>
 <body>
 <nav class="navbar" id="js-nav">
     <a href="/" class="logo white">Dark<span class="violet">.ly</a></span>
     <ul class="main-nav"  id="js-menu">
-        <li><a class="nav-links" href="/">Home</a></li>
-        <li><a class="nav-links"  href="/">News</a></li>    
+        <li><a class="nav-links" href="index.html">Home</a></li>
+        <li><a class="nav-links"  href="news.html">News</a></li>    
         <li><a class="nav-links"  href="login.html">Login</a>
         </li>
     </ul>
