--- a/news.html
+++ b/news.html
@@ -54,5 +54,17 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
                 <a class="news-link" href="article.html">Read more...</a>
         </div>
     </div>
+        <div class="card">
+        <div class="news-title">
+            <p>News title</p>
+        </div>
+        <div class="news-img">
+            <img src="https://picsum.photos/200/300">
+        </div>
+        <div class="news-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
+                <a class="news-link" href="article.html">Read more...</a>
+        </div>
+    </div>
 </body>
 </html>
