--- a/news.html
+++ b/news.html
@@ -50,8 +50,8 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
             <img src="https://picsum.photos/200/300">
         </div>
         <div class="news-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
-                <a class="news-link" href="article.html">Read more...</a>
+             Каждый из нас понимает очевидную вещь: высококачественный прототип будущего проекта однозначно фиксирует необходимость экономической целесообразности принимаемых решений. Прежде всего, постоянный количественный рост и сфера нашей активности однозначно определяет каждого участника как способного принимать собственные решения касаемо новых принципов формирования материально-технической и кадровой базы. Разнообразный и богатый опыт говорит нам, что укрепление и развитие внутренней структуры требует анализа глубокомысленных рассуждений.
+            <a class="news-link" href="article.html">Read more...</a>
         </div>
     </div>
         <div class="card">
