--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
             parentNav.classList.toggle('clicked');
         });</script>    
 <form action="login.php" method=POST>
-<i class="fas fa-user"></i>
+<i class="fas fa-user form-avatar"></i>
 <p>
         <p><strong>Your login</strong></p>
         <input type="text" name="login" value="">
