--- a/news.html
+++ b/news.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
 integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles/form.css">
     <link rel="stylesheet" type="text/css" href="styles/news.css">
 </head>
 <body>
@@ -41,17 +40,87 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
         navBarTog.addEventListener('click', function () {
             
             parentNav.classList.toggle('clicked');
-        });</script>    
-    <div class="card">
-        <div class="news-title">
-            <p>News title</p>
+        });</script>
+    <div class="news-feed">    
+        <div class="card">
+            <div class="news-title">
+                <p>News title</p>
+            </div>
+            <div class="news-img">
+                <img src="https://picsum.photos/200/300">
+            </div>
+            <div class="news-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
+                    <a class="news-link" href="article.html">Read more...</a>
+            </div>
+            <div class="reaction">
+                <hr>
+                        <p><i class="far fa-heart"></i><i class="far fa-comment"></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i></p>
+            </div>
         </div>
-        <div class="news-img">
-            <img src="https://picsum.photos/200/300">
+        <div class="card">
+            <div class="news-title">
+                <p>News title</p>
+            </div>
+            <div class="news-img">
+                <img src="https://picsum.photos/200/300">
+            </div>
+            <div class="news-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
+                    <a class="news-link" href="article.html">Read more...</a>
+            </div>
+            <div class="reaction">
+                <hr>
+                        <p><i class="far fa-heart"></i><i class="far fa-comment"></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i></p>
+            </div>
         </div>
-        <div class="news-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
-                <a class="news-link" href="article.html">Read more...</a>
+        <div class="card">
+            <div class="news-title">
+                <p>News title</p>
+            </div>
+            <div class="news-img">
+                <img src="https://picsum.photos/200/300">
+            </div>
+            <div class="news-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
+                    <a class="news-link" href="article.html">Read more...</a>
+            </div>
+            <div class="reaction">
+                <hr>
+                        <p><i class="far fa-heart"></i><i class="far fa-comment"></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="news-title">
+                <p>News title</p>
+            </div>
+            <div class="news-img">
+                <img src="https://picsum.photos/200/300">
+            </div>
+            <div class="news-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
+                    <a class="news-link" href="article.html">Read more...</a>
+            </div>
+            <div class="reaction">
+                <hr>
+                        <p><i class="far fa-heart"></i><i class="far fa-comment"></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="news-title">
+                <p>News title</p>
+            </div>
+            <div class="news-img">
+                <img src="https://picsum.photos/200/300">
+            </div>
+            <div class="news-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
+                    <a class="news-link" href="article.html">Read more...</a>
+            </div>
+            <div class="reaction">
+                <hr>
+                        <p><i class="far fa-heart"></i><i class="far fa-comment"></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i></p>
+            </div>
         </div>
     </div>
 </body>
