--- a/news.html
+++ b/news.html
@@ -47,7 +47,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
                 <p>News title</p>
             </div>
             <div class="news-img">
-                <img src="https://picsum.photos/200/300">
+                <img src="https://picsum.photos/600/600">
             </div>
             <div class="news-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
@@ -55,7 +55,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
             </div>
             <div class="reaction">
                 <hr>
-                        <p><i class="far fa-heart"></i><i class="far fa-comment"></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i></p>
+                        <p></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i><i class="far fa-comment"></i><i class="far fa-heart"></i></p>           
             </div>
         </div>
         <div class="card">
@@ -63,7 +63,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
                 <p>News title</p>
             </div>
             <div class="news-img">
-                <img src="https://picsum.photos/200/300">
+                <img src="https://picsum.photos/1000/1000">
             </div>
             <div class="news-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
@@ -71,7 +71,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
             </div>
             <div class="reaction">
                 <hr>
-                        <p><i class="far fa-heart"></i><i class="far fa-comment"></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i></p>
+                        <p></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i><i class="far fa-comment"></i><i class="far fa-heart"></i></p>
             </div>
         </div>
         <div class="card">
@@ -79,7 +79,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
                 <p>News title</p>
             </div>
             <div class="news-img">
-                <img src="https://picsum.photos/200/300">
+                <img src="https://picsum.photos/600/1000">
             </div>
             <div class="news-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
@@ -87,7 +87,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
             </div>
             <div class="reaction">
                 <hr>
-                        <p><i class="far fa-heart"></i><i class="far fa-comment"></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i></p>
+                        <p></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i><i class="far fa-comment"></i><i class="far fa-heart"></i></p>
             </div>
         </div>
         <div class="card">
@@ -95,7 +95,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
                 <p>News title</p>
             </div>
             <div class="news-img">
-                <img src="https://picsum.photos/200/300">
+                <img src="https://picsum.photos/1000/600">
             </div>
             <div class="news-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
@@ -103,23 +103,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
             </div>
             <div class="reaction">
                 <hr>
-                        <p><i class="far fa-heart"></i><i class="far fa-comment"></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i></p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="news-title">
-                <p>News title</p>
-            </div>
-            <div class="news-img">
-                <img src="https://picsum.photos/200/300">
-            </div>
-            <div class="news-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis justo eget neque interdum, eget faucibus tortor laoreet. Morbi accumsan enim diam, sit amet venenatis diam faucibus id. Donec mattis lobortis risus vitae imperdiet. In tempor hendrerit bibendum. Nulla viverra ultrices semper. Proin ut faucibus felis, id commodo nulla. Donec ac quam faucibus nulla tempus posuere.
-                    <a class="news-link" href="article.html">Read more...</a>
-            </div>
-            <div class="reaction">
-                <hr>
-                        <p><i class="far fa-heart"></i><i class="far fa-comment"></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i></p>
+                        <p></i><i class="fas fa-share"></i><i class="fas fa-thumbtack"></i><i class="far fa-comment"></i><i class="far fa-heart"></i></p>
             </div>
         </div>
     </div>
