--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
         </p>
         <hr>
         <p class="season--about">
-            My social networks    
+            Social networks    
         </p>
         <a href="facebook.com"><i class="fab fa-facebook-f social-network"></i></a>
         <a href="twitter.com"><i class="fab fa-twitter social-network"></i></a>
